2003-04-08    <johan@CP255758-A>

	* src/mcs51/gen.c (gen51Code): display reg usage in --icode-in-asm
	* src/mcs51/ralloc.c (serialRegAssign): update the registers in use and save some slocs
	* src/SDCCicode.h: added riu to show the register usage in --icode-in-asm

2003-04-07  Bernhard Held <bernhard@bernhardheld.de>

	* configure.in: fully support prefix, exec_prefix, datadir, docdir;
	fix bug #487815
	* support/cpp2/Makefile.in: fix bug #487815
	* configure: rebuilt from configure.in
	* Makefile.common.in: docdir changed, new path suffixes
	* sdccconf_in.h: new RETSIGTYPE, and other PATHs
	* sdcc_vc_in.h: reflect changes from sdccconf.h
	* src/SDCCglobl.h: remove *SEPARATOR_CHARS, they are now in sdccconf.h
	* src/SDCCutil.h: remove BINDIR hack
	* doc/sdccman.lyx: update new path hierarchy

2003-04-06    Paul Stoffregen <paul@pjrc.com>

	* src/SDCCpeeph.c: added okToRemoveSLOC test

2003-04-06    Paul Stoffregen <paul@pjrc.com>

	* device/lib/printf_fast.c: added leading zero format ("%06d", etc)

2003-04-06    Paul Stoffregen <paul@pjrc.com>

	* src/SDCCpeeph.c: added labelIsReturnOnly test
	* src/mcs51/peeph.def: Peephole 244: replace ljmp to ret with ret

2003-04-05    <johan@balder>

	* src/SDCCcse.c (cseAllBlocks): fixed bug #460088
	* src/SDCCloop.c (DEFSETFUNC): fixed bug #460088
	* src/SDCCopt.c (eBBlockFromiCode): fixed bug #460088
	* src/SDCCast.c: fixed a warning
	* src/SDCCast.h: fixed a warning
	* src/SDCCicode.c (operandFromAst): fixed a warning

2003-04-04    <johan@balder>

	* src/SDCCloop.c (DEFSETFUNC): undid the fix for bug #519584
	* src/SDCCast.c (decorateType): fixed bug #715076
	* src/SDCC.y: fixed bug #702907

2003-04-03    <johan@balder>

	* device/lib/_mulint.c (_muluint): new #pragma LESS_PEDANTIC
	* src/SDCCopt.c (eBBlockFromiCode): new #pragma LESS_PEDANTIC
	* src/SDCCglobl.h (PRAGMA_LESSPEDANTIC): new #pragma LESS_PEDANTIC
	* src/SDCC.lex (doPragma): new #pragma LESS_PEDANTIC