@@ -47,7 +47,7 @@
 
 CC = ../../bin/sdcc
 
-HEADER=/usr/local/share/gpasm/header
+#HEADER=/usr/local/share/gpasm/header
 
 .SUFFIXES: .asm .c .cod .stc
 
@@ -90,7 +90,8 @@ SRC = b.c \
 	sub2.c \
 	switch1.c \
 	while.c \
-	xor.c
+	xor.c \
+	ptrfunc.c
 
 #	mul1.c \
 
@@ -108,7 +109,10 @@ all:	test
 # The .cod files are generated by gpasm
 # these get loaded by gpsim.
 .asm.cod:
-	gpasm -c -I $(HEADER) $*.asm
+	gpasm $*.asm
+
+#	gpasm -c -I $(HEADER) $*.asm
+
 
 # The .stc files are script files for gpsim
 .cod.stc:
